[package]
name = "faucet"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "faucet"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
client = []

[dependencies]
anchor-lang = { version = "0.29.0" }
anchor-spl = { version = "0.29.0"}
bytemuck = { version = "1.7", features = ["derive"] }
